pre_install_report/library/utils/hello-ingress.yaml
####################################################################
####   hello-ingress.yml                                        ####
####################################################################
####################################################################
#### Author: SAS Institute Inc.                                                                                       ####
####                                                                                                                                           ####
####################################################################
####################################################################
#
# Copyright (c) 2019-2021, SAS Institute Inc., Cary, NC, USA.  All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /hello-world
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 8080
