pre_install_report/library/utils/helloworld-gateway.yaml
####################################################################
####   helloworld-gateway.yml                                    ####
####################################################################
####################################################################
#### Author: SAS Institute Inc.                                                                                       ####
####                                                                                                                                           ####
####################################################################
####################################################################
#
# Copyright (c) 2019-2020, SAS Institute Inc., Cary, NC, USA.  All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
#
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - helloworld-gateway
  http:
  - match:
    - uri:
        exact: /hello-world
    route:
    - destination:
        host: hello-world
        port:
          number: 8080
